feat(users): implementa departamento para cada usuário
